[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "piezo-pic"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["gdsfactory", "numpy", "pydantic"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP","B","SIM","C90","PL","NPY","RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["piezo_pic"]
combine-as-imports = true

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
strict_equality = true
follow_imports = "silent"

# Per-module overrides (correct TOML for pyproject)
[[tool.mypy.overrides]]
module = ["gdsfactory", "gdsfactory.*"]
ignore_missing_imports = true
